[gd_scene load_steps=7 format=3 uid="uid://i1r2o8sh1u4"]

[ext_resource type="Script" path="res://scenes/light_fearing_spike/light_fearing_spike.gd" id="1_bosob"]
[ext_resource type="Texture2D" uid="uid://bgu4lnsafosmc" path="res://icon.svg" id="2_n7263"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmm6f"]
size = Vector2(69.5, 61)

[sub_resource type="Gradient" id="Gradient_5mtur"]
offsets = PackedFloat32Array(0, 0.722944)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ieqev"]
gradient = SubResource("Gradient_5mtur")
fill = 1
fill_from = Vector2(0.492355, 0.513761)
repeat = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_0bgpv"]
radius = 109.005

[node name="LightFearingSpike" type="Node2D"]
script = ExtResource("1_bosob")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, -5.72205e-06)
scale = Vector2(0.65625, 0.601563)
texture = ExtResource("2_n7263")

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_qmm6f")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
texture = SubResource("GradientTexture2D_ieqev")

[node name="LightStoneArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightStoneArea"]
shape = SubResource("CircleShape2D_0bgpv")
debug_color = Color(0.658824, 0, 0.160784, 0.309804)

[connection signal="body_entered" from="DeathArea" to="." method="process_collision_with_player"]
[connection signal="body_entered" from="LightStoneArea" to="." method="stone_entering_processing"]
[connection signal="body_exited" from="LightStoneArea" to="." method="stone_exiting_processing"]
